ImmutableValueMap.of: Retain order of items as stated in JavaDoc. ImmutableValueMap.copyOf: Ensure map is immutable.